# daddy

./: .gitignore  README.md  pyproject.toml  setup.py  test_daddy.py
src/assign/: action.cpp  action.hh  action.py  assign.cpp  assign.hh  assign.py  simple_linear.cpp  simple_linear.hh
src/daddy/: __init__.py  ddd.pxd  dddlib.pxd  dddlib.pyi  dddlib.pyx  expr.py  tikz.py
src/daddy/pygmy/: __init__.py  comp.py  lang.py  parse.py
